--- a/unit2.ipynb
+++ b/unit2.ipynb
@@ -2,9 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_csv.reader object at 0x000001D539E77FA0>\n",
+      "['날짜', '지점', '평균기온(℃)', '최저기온(℃)', '최고기온(℃)']\n",
+      "['\\t2023-07-16', '108', '24.6', '23.7', '25.4']\n",
+      "['\\t2023-07-17', '108', '25.5', '23.7', '27.8']\n",
+      "['\\t2023-07-18', '108', '25.2', '24.1', '27.7']\n",
+      "['\\t2023-07-19', '108', '27.2', '22.5', '32.4']\n",
+      "['\\t2023-07-20', '108', '27.9', '24', '32.8']\n",
+      "['\\t2023-07-21', '108', '29.5', '24.6', '34.3']\n",
+      "['\\t2023-07-22', '108', '27.7', '24.6', '32.5']\n",
+      "['\\t2023-07-23', '108', '25.2', '24.5', '25.8']\n",
+      "['\\t2023-07-24', '108', '26.9', '24.6', '30']\n",
+      "['\\t2023-07-25', '108', '27.8', '25.8', '30.5']\n",
+      "['\\t2023-07-26', '108', '27.6', '24.9', '31.1']\n",
+      "['\\t2023-07-27', '108', '28.4', '24.4', '32.2']\n",
+      "['\\t2023-07-28', '108', '29.5', '25.4', '34.1']\n",
+      "['\\t2023-07-29', '108', '29.1', '26.1', '33.3']\n",
+      "['\\t2023-07-30', '108', '28.8', '24.9', '34.9']\n",
+      "['\\t2023-07-31', '108', '28.7', '25.6', '33.4']\n",
+      "['\\t2023-08-01', '108', '29.9', '25.5', '34.2']\n",
+      "['\\t2023-08-02', '108', '29.7', '26.8', '33.7']\n",
+      "['\\t2023-08-03', '108', '29.5', '25.8', '33.8']\n",
+      "['\\t2023-08-04', '108', '30', '26.5', '34.4']\n",
+      "['\\t2023-08-05', '108', '30.3', '26.4', '34.9']\n",
+      "['\\t2023-08-06', '108', '29.8', '27', '33']\n",
+      "['\\t2023-08-07', '108', '30.4', '27.3', '34.6']\n",
+      "['\\t2023-08-08', '108', '30.9', '26.4', '35.8']\n",
+      "['\\t2023-08-09', '108', '28.3', '25.1', '31.6']\n",
+      "['\\t2023-08-10', '108', '22.2', '20.9', '25.1']\n",
+      "['\\t2023-08-11', '108', '23.5', '21.6', '24.9']\n",
+      "['\\t2023-08-12', '108', '23.3', '22.5', '24.1']\n",
+      "['\\t2023-08-13', '108', '27', '22.6', '31.1']\n",
+      "['\\t2023-08-14', '108', '28.1', '24.8', '31.9']\n",
+      "['\\t', '', '', '', '']\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "f=open(\"seouldegree.csv\",'r',encoding=\"cp949\")\n",
@@ -14,11 +54,32 @@
     "    print(row)\n",
     "f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
